--- a/sorular.html
+++ b/sorular.html
@@ -153,7 +153,7 @@
     </div>
 
     <script>
-        const BASE_API_URL = "https://localhost:7127";
+        const BASE_API_URL = "tobechanged";
 
         document.addEventListener('DOMContentLoaded', () => {
             const tableBody = document.getElementById('questionsTableBody');
