--- a/sorular.html
+++ b/sorular.html
@@ -153,7 +153,7 @@
     </div>
 
     <script>
-        const BASE_API_URL = "tobechanged";
+        const BASE_API_URL = "https://guy-unserene-rufina.ngrok-free.dev";
 
         document.addEventListener('DOMContentLoaded', () => {
             const tableBody = document.getElementById('questionsTableBody');
