--- a/sorular.html
+++ b/sorular.html
@@ -159,7 +159,11 @@
             const tableBody = document.getElementById('questionsTableBody');
             const spinner = document.getElementById('loadingSpinner');
 
-            fetch(`${BASE_API_URL}/api/questions`)
+            fetch(`${BASE_API_URL}/api/questions`, {
+                headers: {
+                    'ngrok-skip-browser-warning': 'true'
+                }
+            })
                 .then(response => {
                     if (!response.ok) {
                         throw new Error(`Network response was not ok: ${response.statusText}`);
