--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
         document.addEventListener('touchend', endDrag);
 
         // --- Form Submission Logic ---
-        const BASE_API_URL = "https://guy-unserene-rufina.ngrok-free.dev";
+        const BASE_API_URL = "TOBE_CHANGED";
         // ... (rest of the form submission script is unchanged)
         document.getElementById('questionForm').addEventListener('submit', async function(e) {
             e.preventDefault();
